# alg_ja_tkly

./: .gitignore  .pylintrc  Game.py  README.md  pyproject.toml  tasks.py
Dokumentaatio/: Käyttöohje.md  Käyttöohje.txt  Määrittelydokumentti.md  Määrittelydokumentti.txt  Testausdokumentti.md  Testausdokumentti.txt  Toteutusdokumentti.md
Dokumentaatio/Viikoraportit/: Lopullinen.md  Viikko 1.md  Viikko 1.txt  Viikko-3.md  Viikko-4.md  Viikko-5.md  Viikko-6.md  viikko-2.md
src/: ai.py  evaluation.py  expectiminimax.py  game.py  measure.py  play_game.py
src/algorithms/: depth_one_move.py  expectiminimax.py
src/tests/: 2048_test.py  test_2048.py  test_depth_one.py  test_evaluation.py  test_expectiminimax.py  test_measure.py  test_play_game.py
