[tool.poetry]
name = "alg-ja-tkly"
version = "0.1.0"
description = ""
authors = ["iroguin <143116756+Iroguin@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pygame = "^2.6.1"
pylint = "^3.3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
