[tool.poetry]
name = "alg-ja-tkly"
version = "0.1.0"
description = ""
authors = ["iroguin <143116756+Iroguin@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pygame = "^2.6.1"
pylint = "^3.3.7"
invoke = "^2.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
coverage = "^7.9.2"
invoke = "^2.2.0"
autopep8 = "^2.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
